# gender_bias_research

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  yigit_okar_code.py
config/: config.yaml
data/models_binary/: training_results.json
data/models_binary/best_models/: label_encoder.pkl  lasso_logistic_model.pkl  random_forest_model.pkl  scaler.pkl  training_results.pkl
scripts/: 01_label_data.py  02_scrub_text.py  03_generate_embeddings.py  04_train_models.py
src/data_processing/: gender_labeling.py  text_scrubbing.py
src/embeddings/: bert_embeddings.py  openai_embeddings.py
src/modeling/: classifiers.py
src/utils/: config_loader.py  file_io.py  logging_utils.py
tests/: test_classifiers.py  test_file_io.py  test_gender_labeling.py  test_text_scrubbing.py  test_torch_mlp.py
